--- a/public/css/app.css
+++ b/public/css/app.css
@@ -57,29 +57,95 @@ table {
   border-spacing: 0;
 }
 
-#welcome {
+.welcome-jumbo {
+  max-width: calc(100vw - 350px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #ed4852; /* Old browsers */ /* FF3.6-15 */ /* Chrome10-25,Safari5.1-6 */
+  background: radial-gradient(ellipse at center, #ed4852 0%, #9c1b24 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  overflow: hidden;
+  padding: 100px;
+}
+.welcome-jumbo .status {
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 0.8rem;
+  font-weight: 700;
+  color: white;
+  background: black;
+  border-radius: 5px;
+  align-self: flex-start;
+  margin-bottom: 20px;
+}
+.welcome-jumbo h1 {
+  font-size: 4rem;
+  font-weight: 900;
+  align-self: flex-start;
+  color: white;
+  margin-bottom: 100px;
+}
+.welcome-jumbo .burger-fries {
+  width: 100%;
+  position: relative;
+}
+
+body {
+  line-height: 1;
+  background: white;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:after,
+blockquote:before,
+q:after,
+q:before {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+#app-layout {
   display: grid;
   grid-template-columns: 350px 1fr;
   width: 100%;
   height: 100vh;
 }
-#welcome .welcome-menu {
+#app-layout .side-menu {
   background: white;
   padding: 50px;
   position: relative;
 }
-#welcome .welcome-menu .logo {
+#app-layout .side-menu .logo {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
 }
-#welcome .welcome-menu .logo img {
+#app-layout .side-menu .logo img {
   max-width: 100px;
 }
-#welcome .welcome-menu .menu {
+#app-layout .side-menu .menu {
   margin-bottom: 50px;
 }
-#welcome .welcome-menu .menu .menu-title {
+#app-layout .side-menu .menu .menu-title {
   text-transform: uppercase;
   color: #0971ce;
   font-weight: 700;
@@ -88,7 +154,7 @@ table {
   padding-bottom: 20px;
   margin-bottom: 20px;
 }
-#welcome .welcome-menu .menu .links li a {
+#app-layout .side-menu .menu .links li a {
   font-size: 1.1rem;
   color: black;
   font-weight: 700;
@@ -97,13 +163,13 @@ table {
   display: block;
   transition: color 0.3s ease-in-out;
 }
-#welcome .welcome-menu .menu .links li a:hover {
+#app-layout .side-menu .menu .links li a:hover {
   color: red;
 }
-#welcome .welcome-menu .social-icons {
+#app-layout .side-menu .social-icons {
   display: flex;
 }
-#welcome .welcome-menu .social-icons a {
+#app-layout .side-menu .social-icons a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -116,54 +182,28 @@ table {
   border-radius: 50%;
   margin-right: 10px;
 }
-#welcome .welcome-menu .location {
+#app-layout .side-menu .location {
   align-self: center;
   position: absolute;
   bottom: 100px;
 }
-#welcome .welcome-menu .location .address {
+#app-layout .side-menu .location .address {
   color: #7a8d99;
   margin-bottom: 20px;
   line-height: 1.7;
 }
-#welcome .welcome-menu .location .phone-number a {
+#app-layout .side-menu .location .phone-number a {
   color: #0971ce;
   font-size: 2rem;
   font-weight: 700;
   text-decoration: none;
 }
-#welcome .welcome-jumbo {
+#app-layout #content-section {
   max-width: calc(100vw - 350px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   background: #ed4852; /* Old browsers */ /* FF3.6-15 */ /* Chrome10-25,Safari5.1-6 */
   background: radial-gradient(ellipse at center, #ed4852 0%, #9c1b24 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   overflow: hidden;
   padding: 100px;
-}
-#welcome .welcome-jumbo .status {
-  display: inline-block;
-  padding: 10px 15px;
-  font-size: 0.8rem;
-  font-weight: 700;
-  color: white;
-  background: black;
-  border-radius: 5px;
-  align-self: flex-start;
-  margin-bottom: 20px;
-}
-#welcome .welcome-jumbo h1 {
-  font-size: 4rem;
-  font-weight: 900;
-  align-self: flex-start;
-  color: white;
-  margin-bottom: 100px;
-}
-#welcome .welcome-jumbo .burger-fries {
-  width: 100%;
-  position: relative;
 }
 
 #information {
@@ -336,36 +376,4 @@ h2 {
   font-size: 3rem;
   font-weight: 700;
   margin-bottom: 3rem;
-}
-
-body {
-  line-height: 1;
-  background: white;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:after,
-blockquote:before,
-q:after,
-q:before {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
 }
